Changelog
=========


1.4 (unreleased)
----------------

- Nothing changed yet.


1.3 (2013-05-03)
----------------

- Drop official Plone 4.0 support.
  [jone]

- Component registry layer: use isolated ZCML layers.
  When using the same layer instances it may conflict with integration or
  functional testing layers.
  [jone]

- Add splinter integration and Plone page objects.
  [jone]

- onegov.ch approved: add badge to readme.
  [jone]

- MockTestCase: Support Products.PloneHotfix20121106 patch when mocking getToolByName.
  [jone]

- MockTestCase: add checks that setUp is called correctly.
  [jone]


1.2 (2012-05-22)
----------------

- Add ``stub_reponse`` method to ``MockTestCase`` and adjust the
  ``stub_request`` method accordant.
  [phgross]

- Made providing interfaces configurable for the ``stub_request`` method.
  [phgross]

- Let the stub_request method also stub the getStatus of the response.
  [phgross]

- Add ``stub_request`` method to ``MockTestCase``.
  [jone]

- No longer tear down the component registry in mock test case. Use the
  ComponentRegistryLayer.
  [jone]

- Add ``ComponentRegistryLayer`` base class.
  [jone]

- Add ``mock_interface`` and ``stub_interface`` methods to MockTestCase, creating
  a mock and using the interface as spec.
  [jone]

- Accept also interfaces directly rather than lists of interfaces when
  creating mocks or stubs which provides the interfaces.
  [jone]


1.1 (2011-11-16)
----------------

- Patch mock_tool: do not count, so that it can be used multiple times.
  [jone]


1.0 (2011-10-12)
----------------

- Initial release